examples/negative/type_errors/L1/10_eq_int_bool.ob
MODULE EqIntBool;

VAR i: INTEGER;
    b: BOOLEAN;
    ok: BOOLEAN; (* Ensures errors occur on the correct line *)

BEGIN
  i := 42;
  b := TRUE;
  i := i = b; ok := TRUE;
END EqIntBool.
